--- a/static/package.json
+++ b/static/package.json
@@ -11,6 +11,7 @@
     "mapbox-gl": "^1.8.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-feather": "^2.0.3",
     "react-mapbox-gl": "^4.8.2",
     "react-scripts": "3.4.0"
   },
