--- a/projet/package.json
+++ b/projet/package.json
@@ -13,6 +13,7 @@
   "author": "BJF",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "csv-parse": "^4.8.5",
     "express": "^4.17.1",
