--- a/projet/static/package.json
+++ b/projet/static/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^16.13.0",
     "react-feather": "^2.0.3",
     "react-mapbox-gl": "^4.8.2",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "socket.io-client": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
