--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "exercices",
+  "name": "beermap",
   "version": "1.0.0",
-  "description": "Beer application",
+  "description": "Beer Map",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
     "url": "todo"
   },
-  "author": "BJF",
+  "author": "MJN",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.2",
